# fantasy

./: .flake8  .gitignore  LICENSE  Makefile  README.md  debug_yahoo.py  pyproject.toml  requirements.txt
config/: data_sources.yaml
examples/: collect_data.py  create_dummy_projections.py  dummy_projections.csv  lineup_optimizer.py  player_matching_example.py  process_dff_csv.py  run_lineup_optimizer.py  run_pipeline.py  scrape_yahoo_contests.py  test_slate_types.py  yahoo_players.csv
lineups/: lineups_NFL_100_Guaranteed_[10_to_1st]_20250817_202010.csv  lineups_NFL_100_Guaranteed_[10_to_1st]_20250817_212236.csv  lineups_NFL_100_Guaranteed_[20_to_1st]_20250817_202010.csv  lineups_NFL_100_Guaranteed_[No_Veterans]_20250817_202010.csv  lineups_NFL_300_Guaranteed_(30_to_1st)_20250817_202010.csv  lineups_NFL_500_Guaranteed_[100_to_1st]_20250817_201943.csv  lineups_NFL_500_Guaranteed_[100_to_1st]_20250817_202010.csv  lineups_NFL_500_Guaranteed_[100_to_1st]_20250817_212236.csv
scripts/: dev-setup.sh
src/: __init__.py
src/data_collection/: __init__.py  base.py  lineup_optimizer.py  pipeline.py  player_matching.py  projection_consensus.py
src/data_collection/collectors/: __init__.py  basketball_reference.py  daily_fantasy_fuel.py  yahoo_dfs.py
